# velocityX-ai-journey

./: README.md
docs/superpowers/plans/: 2026-06-17-corporate-skills.md
docs/superpowers/specs/: 2026-06-17-corporate-skills-design.md
mcp-servers/: README.md  install.sh
mcp-servers/gardener-ai-mcp/: .env.example  .gitignore  CLAUDE.md  CLAUDE.md_bak  README.md  pyproject.toml
mcp-servers/gardener-ai-mcp/.claude/agents/: gardener-architect.md
mcp-servers/gardener-ai-mcp/.claude/skills/gardener-research/: SKILL.md
mcp-servers/gardener-ai-mcp/config/: __init__.py  settings.py
mcp-servers/gardener-ai-mcp/docker/: .dockerignore  Dockerfile
mcp-servers/gardener-ai-mcp/docs/: architecture.md  deploy-cloud.md  deploy-local.md  execution_plan.md  testing-functional.md  testing.md
mcp-servers/gardener-ai-mcp/docs/adr/: 001_phase1_architecture.md
mcp-servers/gardener-ai-mcp/embeddings/: openai_embedder.py
mcp-servers/gardener-ai-mcp/gardener_mcp/: __init__.py  context.py  models.py  server.py  tools.py
mcp-servers/gardener-ai-mcp/helm/: Chart.yaml  values.schema.json  values.yaml
mcp-servers/gardener-ai-mcp/helm/charts/: qdrant-1.18.1.tgz
mcp-servers/gardener-ai-mcp/helm/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
mcp-servers/gardener-ai-mcp/ingestion/: __init__.py  base.py  chunking.py  code_indexer.py  github_docs.py  github_issues.py  github_prs.py  sap_github_issues.py
mcp-servers/gardener-ai-mcp/retrieval/: __init__.py  base.py  hybrid.py  semantic.py
mcp-servers/gardener-ai-mcp/scripts/: __init__.py  healthcheck.py  ingest_docs.py  ingest_sap_github.py  setup_kind.sh
mcp-servers/gardener-ai-mcp/tests/: __init__.py
mcp-servers/gardener-ai-mcp/tests/embeddings/: test_openai_embedder.py
mcp-servers/gardener-ai-mcp/tests/gardener_mcp/: __init__.py  test_tools.py
mcp-servers/gardener-ai-mcp/tests/ingestion/: __init__.py  test_base.py  test_chunking.py  test_code_indexer.py  test_github_docs.py  test_github_issues.py  test_github_prs.py  test_sap_github_issues.py
mcp-servers/gardener-ai-mcp/tests/retrieval/: test_hybrid.py  test_semantic.py
mcp-servers/gardener-ai-mcp/tests/vectorstore/: test_qdrant.py
mcp-servers/gardener-ai-mcp/vectorstore/: base.py  qdrant.py
mcp-servers/mcp-proxy/: config.yaml.example  package-lock.json  package.json  tsconfig.json
mcp-servers/mcp-proxy/docs/: 2026-06-17-mcp-proxy-design.md
mcp-servers/mcp-proxy/src/: index.ts  types.ts
mcp-servers/mcp-proxy/src/config/: loader.ts
mcp-servers/mcp-proxy/src/pool/: connection-pool.ts  sse-connection.ts  stdio-connection.ts
mcp-servers/mcp-proxy/src/registry/: backend-registry.ts
mcp-servers/mcp-proxy/src/router/: exact-match.ts  llm-prune.ts  router.ts  rule-match.ts
mcp-servers/mcp-proxy/src/server/: http-server.ts  mcp-server.ts
mcp-servers/mcp-proxy/tests/integration/: mcp-server.test.ts
mcp-servers/mcp-proxy/tests/unit/: backend-registry.test.ts  config-loader.test.ts  connection-pool.test.ts  http-server.test.ts  router.test.ts
mcp-servers/plato-mcp/: README.md  refresh_token.py  requirements.txt  server.py
mcp-servers/sap-wiki-mcp/: .gitignore  README.md  env.example  package.json  tsconfig.json
mcp-servers/sap-wiki-mcp/src/: cache.ts  config.ts  confluence.ts  logger.ts  markdown-converter.ts  server.ts  tools.ts
mcp-servers/sci-ai-mcp/: .env.example  .gitignore  README.md  USAGE.md  pyproject.toml
mcp-servers/sci-ai-mcp/config/: __init__.py  settings.py
mcp-servers/sci-ai-mcp/embeddings/: __init__.py  base.py  openai_embedder.py
mcp-servers/sci-ai-mcp/ingestion/: __init__.py  base.py  chunking.py  github_docs.py
mcp-servers/sci-ai-mcp/retrieval/: __init__.py  base.py  hybrid.py  semantic.py
mcp-servers/sci-ai-mcp/sci_mcp/: __init__.py  context.py  models.py  server.py  tools.py
mcp-servers/sci-ai-mcp/scripts/: __init__.py  healthcheck.py  ingest_docs.py
mcp-servers/sci-ai-mcp/tests/: __init__.py
mcp-servers/sci-ai-mcp/vectorstore/: __init__.py  base.py  qdrant.py
scripts/: gardener-run.sh
skills/containerization-check/: SKILL.md  checklist.yaml
skills/docs/superpowers/specs/: 2026-06-18-containerization-check-design.md
skills/gardener-ops/: SKILL.md  template.md
skills/gardener-ops/scripts/: gardener-run.sh
skills/gardener-research/: SKILL.md
skills/sap-slides/: skill.md
skills/slack-hot-topics/: SKILL.md
